# ktop

./: Cargo.toml  README.md  ktop.toml
src/: action.rs  app.rs  config.rs  errors.rs  event.rs  main.rs  tui.rs
src/panel/: git_panel.rs  mod.rs  system_panel.rs
src/source/: git.rs  mod.rs  system.rs
src/ui/: layout.rs  mod.rs  statusbar.rs  tabs.rs
