[package]
name = "ktop"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sysinfo = "0.33"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
color-eyre = "0.6"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
